ABOUT SCROLLBAR SOLVED!

--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,7 @@ main {
   height: 100%;
   min-height: 100%;
   width: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
+
   background: hsla(10, 9%, 87%, 1);
   
     background: linear-gradient(180deg, hsla(10, 9%, 87%, 1) 0%, hsla(225, 10%, 84%, 1) 52%, hsla(214, 28%, 79%, 1) 100%);
