--- a/src/styles/PageContent.css
+++ b/src/styles/PageContent.css
@@ -1,7 +1,6 @@
 /* MAIN */
 
 .Page-content-all {
-	flex-basis: auto;
 	height:fit-content;
 	width: 55%;
 	left: 0;
